[tool.poetry]
name = "panto"
version = "0.1.0"
description = ""
authors = ["Niumandzi <amazheykin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"
mediapipe = "^0.8.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"